--- a/login.scss
+++ b/login.scss
@@ -3,13 +3,8 @@ $mediumBlue: rgb(0, 155, 222);
 $darkBlue: rgb(50, 136, 199);
 $gold: rgb(255, 184, 25);
 
-.logo {
-    width: 65px;
-    margin: 25px 35px;
-}
-
-.login {
-    margin: -95px 25px 20px;
+.signup {
+    margin: 20px 25px;
     font-size: 20px;
     color: $darkBlue;
 }
@@ -18,17 +13,14 @@ a:hover {
     color: $lightBlue;
 }
 
-h1 {
-    font-size: 120px;
-    color: $darkBlue;
-    margin: 90px 0px 0px;
-    text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
-}
-
-.signupInputArea {
+.loginInputArea {
     width: 30%;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 115px;
+    .logo {
+        width: 100px;
+        margin-bottom: 37px;
+    }
     input {
         background-color: transparent;
         color: white;
@@ -47,6 +39,7 @@ h1 {
         font-weight: 700;
         background-color: rgba(0, 155, 222, .75);
         color: white;
+        border: 1px solid white;
     }
     button:hover {
         background-color: transparent;
