--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,8 @@
-.btns {
-    margin: 25px;
+* {
+    font-family: 'Quicksand', sans-serif;
+}
+
+body {
+    background-image: url('faux-twitter-background-2.jpeg');
+    background-size: cover;
 }
